Ultima versão feita por mim - com Com AssServiceChargeTeste OK

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -50,6 +50,7 @@
     <Compile Include="AddCommissionedEmployeeTest.cs" />
     <Compile Include="AddHourlyEmployeeTest.cs" />
     <Compile Include="AddSalarieEmployeeTest.cs" />
+    <Compile Include="AddServiceChargeTest.cs" />
     <Compile Include="DeleteEmployeeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalesReceiptTransactionTest.cs" />
