--- a/Domain/Payroll.Domain.csproj
+++ b/Domain/Payroll.Domain.csproj
@@ -59,9 +59,12 @@
     <Compile Include="SalariedClassification.cs" />
     <Compile Include="SalesReceipt.cs" />
     <Compile Include="SalesReceiptTransaction.cs" />
+    <Compile Include="ServiceCharge.cs" />
+    <Compile Include="ServiceChargeTransaction.cs" />
     <Compile Include="TimeCard.cs" />
     <Compile Include="TimeCardTransaction.cs" />
     <Compile Include="Transaction.cs" />
+    <Compile Include="UnionAffiliation.cs" />
     <Compile Include="WeeklySchedule.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
