--- a/Domain/Payroll.Domain.csproj
+++ b/Domain/Payroll.Domain.csproj
@@ -50,11 +50,12 @@
     <Compile Include="Employee.cs" />
     <Compile Include="HoldMethod.cs" />
     <Compile Include="HourlyClassification.cs" />
+    <Compile Include="IPayrollDatabase.cs" />
     <Compile Include="MonthlySchedule.cs" />
     <Compile Include="PaymentClassification.cs" />
     <Compile Include="PaymentMethod.cs" />
     <Compile Include="PaymentSchedule.cs" />
-    <Compile Include="PayrollDatabase.cs" />
+    <Compile Include="InMemoryPayrollDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalariedClassification.cs" />
     <Compile Include="SalesReceipt.cs" />
