--- a/Domain/Payroll.Domain.csproj
+++ b/Domain/Payroll.Domain.csproj
@@ -47,6 +47,8 @@
     <Compile Include="BiweeklySchedule.cs" />
     <Compile Include="ChangeAddressTransaction.cs" />
     <Compile Include="ChangeEmployeeTransaction.cs" />
+    <Compile Include="ChangeHourlyTransaction.cs" />
+    <Compile Include="ChangeClassificationTransaction.cs" />
     <Compile Include="ChangeNameTransaction.cs" />
     <Compile Include="CommissionedClassification.cs" />
     <Compile Include="DeleteEmployeeTransaction.cs" />
